fixed status bar width in Firefox
It appears the introduction of padding on the table-cell elements led to
a reduction of total width on Firefox 3.6.10, leaving the username with
too much spacing to the right border.

This seems like a hacky workaround, so it might be reverted when the
issue is better understood.

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,9 +9,15 @@ footer {
 }
 
 header,
+header h1,
+footer,
+footer p {
+	width: 100%;
+}
+
+header,
 footer {
 	display: table;
-	width: 100%;
 }
 
 header h1,
